# rainy-day

./: .env.example  .gitignore  AI_AGENT_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI_THINKING.md  LICENSE  NEW_AUTH.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  vite.config.ts
.agent/rules/: desing-native.md  for-changelog.md  for-desing.md  modularization.md  no-dead-code.md  pnpm-use.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: FUTURE_NOTIFICATIONS.md  GOOGLE_CLOUD_SETUP.md  PRODUCTION_SETUP.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  google-api.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  data_pipeline.rs  lib.rs  main.rs  notifications.rs  processing.rs  search.rs  theme.rs
src-tauri/src/auth/: keychain.rs  mod.rs  token_store.rs
src-tauri/src/google/: calendar.rs  gmail.rs  mod.rs  tasks.rs  types.rs
src/components/: CommandPalette.tsx
src/contexts/: AuthContext.tsx  LanguageContext.tsx  ThemeContext.tsx
src/hooks/: useDailyData.ts  useDailyPlan.test.ts  useDailyPlan.ts  useDeepLinks.ts  useEmailActions.ts  useKeyboardShortcuts.ts  useNativeNotifications.ts  useNoteAI.ts  useNotificationSettings.ts  useNotifications.ts  useSubscription.ts  useSummary.ts  useSyncStatus.ts  useTaskActions.test.ts  useTaskActions.ts  useTranslation.ts  useUpdate.ts
src/i18n/: index.ts  types.ts
(+107 files in other folders)
