[package]
name = "rainy-day"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rainy_day_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2.4.5"
tauri-plugin-store = "2.4.1"
tauri-plugin-http = "2.5.4"
reqwest = { version = "0.12", features = ["json"] }
oauth2 = "5.0.0"
tokio = { version = "1.49.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
urlencoding = "2.1.3"
dotenvy = "0.15"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

